fix: hero gap and tap highlight

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -3,7 +3,6 @@ header{
     top: 0;
     width: 100%;
     z-index: 999;
-    border-bottom: 4px solid white;
 
     a{
         @include resetTextDecorations();
