--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,8 +1,9 @@
-//RESETS
+//GLOBAL
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
 
     //FONT
     font-family: "Roboto", sans-serif;
